@@ -1,14 +1,0 @@
-#include "NewWave/WaveletEvent.hh"
-
-#include <cmath>
-
-namespace NewWave {
-  
-  
-  template<typename T>
-  const WaveletCoefficients &WaveletEvent<T>::coefficients()const{
-    return _coefficients();
-  }
-  
-}
-
